--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,7 @@ AlgebraicDynamics = "5fd6ff03-a254-427e-8840-ba658f502e32"
 AlgebraicPetri = "4f99eebe-17bf-4e98-b6a1-2c4f205a959b"
 Catlab = "134e5e36-593f-5add-ad60-77f754baafbe"
 DelayDiffEq = "bcd4f6db-9728-5f36-b5f7-82caef46ccdb"
+IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 LabelledArrays = "2ee39098-c373-598a-b85f-a56591580800"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
